--- a/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
+++ b/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
@@ -10,10 +10,8 @@
             <div class="slds-page-header__col-title">
                 <div class="slds-media">
                     <div class="slds-media__figure">
-                      <span class="slds-icon_container slds-icon-standard-opportunity">
-                        <svg class="slds-icon slds-page-header__icon" aria-hidden="true">
-                          <use xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#opportunity"></use>
-                        </svg>
+                      <span class="slds-icon_container">
+                          <lightning-icon icon-name={iconName} alternative-text={objectLabel} title={objectLabel}></lightning-icon>
                       </span>
                     </div>
                     <div class="slds-media__body">
