Added some styles and changed markup a bit

--- a/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
+++ b/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
@@ -1,76 +1,78 @@
 <template>
+
     <div class="spinner">
         <template if:true={isLoading}>
             <lightning-spinner alternative-text="Loading" variant="brand" size="large">
             </lightning-spinner>
         </template>
     </div>
-    <div class="slds-page-header slds-page-header_joined">
-        <div class="slds-page-header__row">
-            <div class="slds-page-header__col-title">
-                <div class="slds-media">
+
+    <div class="slds-page-header slds-m-bottom_small">
+        <div class="slds-grid slds-m-bottom_small">
+
+            <div class="slds-col slds-has-flexi-truncate">
+                <div class="slds-media slds-no-space slds-grow">
                     <div class="slds-media__figure">
-                      <span class="slds-icon_container">
-                          <lightning-icon icon-name={iconName} alternative-text={objectLabel} title={objectLabel}></lightning-icon>
-                      </span>
+                        <lightning-icon icon-name={iconName} alternative-text={objectLabel} title={objectLabel}></lightning-icon>
                     </div>
                     <div class="slds-media__body">
-                        <div class="slds-page-header__name">
-                            <div class="slds-page-header__name-title">
-                                <h1>
-                                    <span>{objectLabel}</span>
-                                    <span class="slds-page-header__title slds-truncate" title="Recently Viewed">{label.recentlyViewed}</span>
-                                </h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="slds-page-header__col-actions">
-                <div class="slds-page-header__controls">
-                    <div class="slds-page-header__control">
-                        <ul class="slds-button-group-list">
-                            <li>
-                                <button
-                                        class="slds-button slds-button_neutral"
-                                        name="new-record"
-                                        onclick={createNewRecord}>
-                                    {label.newLabel}
-                                </button>
-                            </li>
-                        </ul>
+                        <p class="slds-text-title_caps slds-line-height_reset">{objectLabel}</p>
+                        <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate" title="My Contacts">All Records</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="slds-page-header__row">
-            <div class="slds-page-header__col-meta">
-                <p class="slds-page-header__meta-text"> {currentNumOfRecords} / {totalNumOfRecords} items • Updated at {lastModifiedDate}</p>
+        <div class="slds-grid">
+            <div class="slds-col slds-size_1-of-6 slds-align-bottom">
+                <lightning-input label='Search' type="search" value={searchKey} onchange={doSearchingData} placeholder={label.searchThisList} variant="label-hidden"></lightning-input>
             </div>
-            <div class="slds-page-header__col-controls">
-                <div class="slds-page-header__controls">
-                    <div class="slds-page-header__control">
-                        <lightning-input type="search" value={searchKey} onchange={doSearchingData} placeholder={label.searchThisList}></lightning-input>
-                    </div>
+            <div class="slds-col slds-align-bottom">
+                <lightning-button-icon class="slds-m-left_xx-small" icon-name="utility:filterList" alternative-text="Filter" title="Filter"></lightning-button-icon>
+                <lightning-button-icon class="slds-m-left_xx-small" icon-name="utility:refresh" alternative-text="Refresh" title="Refresh"></lightning-button-icon>
+            </div>
+            <div class="slds-col slds-no-flex slds-grid slds-align-top">
+                <div class="slds-button-group" role="group">
+                    <button
+                            class="slds-button slds-button_neutral"
+                            name="new-record-button"
+                            onclick={createNewRecord}>
+                        {label.newLabel}
+                    </button>
+                    <button
+                            class="slds-button slds-button_neutral"
+                            name="export-button">
+                        Export
+                    </button>
                 </div>
             </div>
         </div>
     </div>
-    <div style="height: 75vh; " class="slds-col slds-size_1-of-1">
-        <lightning-datatable
-                key-field="Id"
-                data={data}
-                columns={columns}
-                hide-checkbox-column="true"
-                enable-infinite-loading="true"
-                onloadmore={doLoadingData}
-                load-more-offset = "20"
-                onrowaction={handleRowAction}
-                min-column-width = "200"
-                max-column-width = "500"
-                sorted-by={sortedBy}
-                sorted-direction={sortedDirection}
-                onsort={doSortingData}>
-        </lightning-datatable>
-    </div>
+    <article class="slds-card">
+        <div class="slds-card__body">
+            <div class="sfe_lightning-datatable">
+                <lightning-datatable
+                        key-field="Id"
+                        data={data}
+                        columns={columns}
+                        hide-checkbox-column="true"
+                        enable-infinite-loading="true"
+                        onloadmore={doLoadingData}
+                        load-more-offset = "20"
+                        onrowaction={handleRowAction}
+                        min-column-width = "200"
+                        max-column-width = "500"
+                        sorted-by={sortedBy}
+                        sorted-direction={sortedDirection}
+                        onsort={doSortingData}>
+                </lightning-datatable>
+            </div>
+        </div>
+        <footer class="slds-card__footer">
+            <div class="slds-grid">
+                <div class="slds-col">
+                    <p>{currentNumOfRecords} / {totalNumOfRecords} items </p>
+                </div>
+            </div>
+        </footer>
+    </article>
 </template>
