--- a/src/lwc/sfe_DynamicModal/sfe_DynamicModal.html
+++ b/src/lwc/sfe_DynamicModal/sfe_DynamicModal.html
@@ -4,20 +4,22 @@
                  aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
             <div class="slds-modal__container">
                 <header class="slds-modal__header">
-                    <lightning-button-icon
-                            class="slds-modal__close"
-                            title="Close"
-                            data-name="close-modal"
-                            icon-name="utility:close"
-                            icon-class="slds-button_icon-inverse"
-                            onclick={handleDialogClose}>
-                    </lightning-button-icon>
+                    <template if:true={showCloseIcon}>
+                        <lightning-button-icon
+                                class="slds-modal__close"
+                                title="Close"
+                                data-name="close-modal"
+                                icon-name="utility:close"
+                                icon-class="slds-button_icon-inverse"
+                                onclick={handleDialogClose}>
+                        </lightning-button-icon>
+                    </template>
                     <h1 id="sfe_modal-heading-id-01" class="slds-modal__title slds-hyphenate">{modalHeader}</h1>
                 </header>
                 <div id="sfe_modal-content-id-01" class="slds-modal__content slds-p-around_medium">
                     <slot name="content"></slot>
                 </div>
-                <footer id="sfe_modal-footer-id-01" class="slds-modal__footer modal-hidden">
+                <footer id="sfe_modal-footer-id-01" class="slds-modal__footer slds-modal__footer_directional modal-hidden">
                     <slot name="footer"></slot>
                 </footer>
             </div>
