Added new labels

--- a/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
+++ b/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
@@ -69,12 +69,12 @@
                             class="slds-button slds-button_neutral"
                             name="new-record-button"
                             onclick={createNewRecord}>
-                        {label.newLabel}
+                            {label.newLabel}
                     </button>
                     <button
                             class="slds-button slds-button_neutral"
                             name="export-button">
-                        Export
+                            {label.export}
                     </button>
                 </div>
             </div>
