--- a/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
+++ b/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
@@ -10,6 +10,7 @@
     <c-sfe_-dynamic-modal modal-header={label.modalHeader} show-modal={isFilterModalOpen} onclosedialog={handleFilterCancel}>
         <span slot="content">
             <c-sfe_-report-filter
+                    object-api-name={objectApiName}
                     report-filter-data={reportFilterData}
                     onfiltervaluechange={handleFilterValueChange}>
             </c-sfe_-report-filter>
