Added logic to datatable component to handle section changes

--- a/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
+++ b/src/lwc/sfe_LWCDatatable/sfe_LWCDatatable.html
@@ -9,11 +9,18 @@
 
     <c-sfe_-dynamic-modal modal-header={label.modalHeader} show-modal={isFilterModalOpen} onclosedialog={handleFilterCancel}>
         <span slot="content">
-            <c-sfe_-report-filter
-                    object-api-name={objectApiName}
-                    report-filter-data={reportFilterData}
-                    onfiltervaluechange={handleFilterValueChange}>
-            </c-sfe_-report-filter>
+            <lightning-accordion active-section-name="Sections">
+                <template for:each={sections} for:item="section">
+                    <lightning-accordion-section key={section} name={section} label={section}>
+                        <c-sfe_-report-filter
+                                object-api-name={objectApiName}
+                                section={section}
+                                report-filter-data={reportFilterData}
+                                onfiltervaluechange={handleFilterValueChange}>
+                        </c-sfe_-report-filter>
+                    </lightning-accordion-section>
+                </template>
+            </lightning-accordion>
         </span>
         <span slot="footer">
             <button
